--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ before_install:
   - docker build -t flyters633/docker-react -f Dockerfile.dev .
 
 script:
-   -  docker run -e CI=true flyters633/docker-react npm run test -- --covarage
+   -  docker run -e CI=true flyters633/docker-react npm run test -- --coverage
